Removed MaxPermSize from startup vmoptions as not supported in JDK8. Initial implementation of the Constrained proxy using public JDK8 classes
git-svn-id: https://thesource.l7tech.com/thesource/UneasyRooster/branches/trunk_jdk8_post_javelin@42367 219f1c6e-4a0e-43c8-96f2-6e749be13fd4