@@ -723,7 +723,7 @@
             <param name="idea.teamcity.user" expression="${idea.teamcity.user}"/>
             <param name="idea.teamcity.password" expression="${idea.teamcity.password}" if="idea.teamcity.password"/>
             <param name="idea.teamcity.remember" expression="${idea.teamcity.remember}" if="idea.teamcity.remember"/>
-            <param name="idea.gateway.vmOptions" expression="-ea -Xmx880m -XX:MaxPermSize=320m -Djava.security.policy==etc/ssg.policy -Dcom.l7tech.util.buildVersion=${build.version} -Dcom.l7tech.server.home=&quot;${dev.deploy.dir}/Gateway/node/default&quot; -XX:+TieredCompilation -Dcom.l7tech.server.sm.noSecurityManager=true -Dcom.l7tech.server.log.console=true -Dcom.l7tech.server.log.console.extraCats=&quot;AUDIT,LOG&quot; -Dcom.l7tech.logging.debug=false -Djava.net.preferIPv4Stack=true -Dcom.l7tech.server.dbScriptsDirectory=etc/db/liquibase ${unix.entropy}"/>
+            <param name="idea.gateway.vmOptions" expression="-ea -Xmx880m -Djava.security.policy==etc/ssg.policy -Dcom.l7tech.util.buildVersion=${build.version} -Dcom.l7tech.server.home=&quot;${dev.deploy.dir}/Gateway/node/default&quot; -XX:+TieredCompilation -Dcom.l7tech.server.sm.noSecurityManager=true -Dcom.l7tech.server.log.console=true -Dcom.l7tech.server.log.console.extraCats=&quot;AUDIT,LOG&quot; -Dcom.l7tech.logging.debug=false -Djava.net.preferIPv4Stack=true -Dcom.l7tech.server.dbScriptsDirectory=etc/db/liquibase ${unix.entropy}"/>
             <param name="idea.controller.vmOptions" expression="-ea -Dcom.l7tech.util.buildVersion=${build.version} -Dcom.l7tech.server.log.console=true -Dcom.l7tech.gateway.home=../../Gateway"/>
             <param name="idea.configwiz.vmOptions" expression="-ea -Dcom.l7tech.util.buildVersion=${build.version}"/>
             <param name="idea.pcconfig.vmOptions" expression="-ea -Dcom.l7tech.util.buildVersion=${build.version} -Dcom.l7tech.server.controller.home=&quot;${dev.deploy.dir}/Controller&quot;"/>
